[project]
name = "trace-grader"
version = "0.1.0"
description = "Custom data viewer for grading LLM traces - e-ink reader sales assistant"
authors = [
    {name = "AI Class", email = "class@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "python-dateutil>=2.8.2"
]

[dependency-groups]
dev = ["pytest>=7.0.0"]
